style.css
/* GENERAL */

@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");

* {
    margin: 0;
    padding: 0;
    background-color: ghostwhite;
}

body {
    font-family: "Poppins", sans-serif;
    justify-content: center;
    align-items: center;
}

html {
    scroll-behavior: smooth;
}

p {
    color: rgb(85, 85, 85);
    font-size: 2vmin;
}


/* TRANSITION */

a,
.btn {
    transition: all 300ms ease;
}

a {
    background-color: transparent;
}

/* DESKTOP NAV */

nav,
.nav-links {
    display: flex;
}

nav {
    justify-content: space-around;
    align-items: center;
    height: 17vh;
    width: 100%;
    background-color: #dfdfe5;
    border-radius: 0 0 25px 25px;
}

.nav-links {
    gap: 2rem;
    list-style: none;
    font-size: 1.5rem;
    background-color: #dfdfe5;
}

a {
    color: black;
    text-decoration: none;
    text-decoration-color: white;
    font-size: 3vmin;
}

a:hover {
    color: grey;
    text-decoration: underline;
    text-underline-offset: 1rem;
    text-decoration-color: rgb(181, 181, 181);
}

.logo {
    font-size: 5vmin;
    background-color: transparent;
}

.logo:hover {
    cursor: default;
}

.menu-links {
    position: absolute;
    top: 100%;
    right: 0;
    background-color: white;
    width: fit-content;
    max-height: 0;
    overflow: hidden;
}

.menu-links a {
    display: block;
    padding: 10px;
    text-align: center;
    font-size: 10vmin;
    color: black;
    text-decoration: none;
}

.menu-links li {
    list-style: none;
    background-color: #dfdfe5;
}

li {
    background-color: #dfdfe5;
}

.menu-links.open {
    max-height: 300px;
}

.hamburger_button {
    width: 5vmin;
    height: 5vmin;
    justify-content: center;
    background-color: transparent;
}

.hamburger_background {
    width: 10%;
    height: 10%;
    background-color: #afafaf;
}

.navbar_button {
    width: fit-content;
    font-size: 5vmin;
}

/* SECTIONS */

section {
    padding-top: 4vh;
    padding-bottom: 4vh;
    margin: 0 10rem;
    box-sizing: border-box;
    min-height: fit-content;
}

.section-container {
    display: flex;
}

/* About Section */

#about {
    display: flex;
    justify-content: center;
}

.about_container {
    gap: 5rem;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    background-color: transparent;
    justify-content: center;

}

.section__pic-container,
.profile_pic{
    display: flex;
    height: 50vmin;
    width: 50vmin;
    margin: auto 0;
    border-radius: 35px;
    box-shadow:  24px 24px 48px #afafaf,
    -24px -24px 48px #ffffff;
    background-color: transparent;
}

.section__text {
    align-self: center;
    text-align: center;
    background-color: transparent;
    width: 60vmin;
}

.section__text p {
    font-weight: 600;
}

.section__text__p1 {
    text-align: center;
}

.section__text__p2 {
    font-size: 1.75rem;
    margin-bottom: 1rem;
}

.title {
    font-size: 3rem;
    text-align: center;
}

/* ICONS */

.icon {
    cursor: pointer;
    height: 2rem;
}

/* BUTTONS */

.btn-container {
    display: flex;
    justify-content: center;
    gap: 1rem;
}

.btn {
    font-weight: 600;
    transition: all 300ms ease;
    padding: 1rem;
    width: 8rem;
    border-radius: 2rem;
}

.btn-color-1,
.btn-color-2 {
    border: rgb(53, 53, 53) 0.1rem solid;
}

.btn-color-1:hover,
.btn-color-2:hover {
    cursor: pointer;
}

.btn-color-1,
.btn-color-2:hover {
    background: rgb(53, 53, 53);
    color: white;
}

.btn-color-1:hover {
    background: rgb(0, 0, 0);
}

.btn-color-2 {
    background: none;
}

.btn-color-2:hover {
    border: rgb(255, 255, 255) 0.1rem solid;
}

.btn-container {
    gap: 1rem;
}

/* EXPERIENCE */

#experience {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}

.experience-container {
    display: flex;
    justify-content: center;
    flex-direction: row;
    flex-wrap: wrap;
}


.experience-card-body{
    background-color: transparent;
    box-shadow:  24px 24px 48px #afafaf,
    -24px -24px 48px #ffffff;
    margin: 25px 0;
    overflow: hidden;
    border-radius: 35px;
    border-color: black;
    border-width: 20px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.experience-card-image {
    height: auto;
    overflow: hidden;
    aspect-ratio: 1/1;
    max-height: 18vmax;
    display: flex;
    object-fit: cover;
    justify-content: center;
    padding: 3rem;
    border-radius: 60px;
}


.experience-card-text {
    display: flex;
    flex-direction: column;
    align-content: center;
    height: 100%;
    padding-left: 3rem;
    padding-right: 3rem;
    padding-top: 3rem;
    width: 70vmin;
}

.experience-card-position-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
}

.experience-position-info {
    padding-bottom: .5rem;
    font-size: 2.25vmin;
}

.experience-card-description {
    display: flex;
    flex-direction: column;
    white-space: pre-line;
}

.experience-card_link_boarder {
    display: flex;
    align-self: center;
    justify-content: center;
    gap: 1rem;
    margin: 1rem;
    background-color: #dfdfe5;
    border-radius: 2rem;
    height: 6vmin;
    width: 50%;
}

.experience-card-link-text {
    background-color: transparent;
    color: black;
    text-decoration: none;
    text-decoration-color: white;
    font-size: 2.5vmin;
    padding: 0.5rem;
}


/* EDUCATION */

#education {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}


.education-container {
    display: flex;
    justify-content: center;
    flex-direction: column;
}


.education-card-body {
    background-color: transparent;
    box-shadow:  24px 24px 48px #afafaf,
    -24px -24px 48px #ffffff;
    margin: 25px 0;
    width: auto;
    overflow: hidden;
    border-radius: 35px;
    border-color: black;
    border-width: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.education-card-image {
    height: auto;
    overflow: hidden;
    aspect-ratio: 1/1;
    max-height: 18vmax;
    display: flex;
    object-fit: cover;
    justify-content: center;
    padding: 3rem 3rem 1.5rem;
    border-radius: 60px;
}

.education-card-text {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100%;
    padding: 1.5rem 3rem 3rem;
    width: 70vmin;
}

/* PROJECTS */

#projects {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}

.project-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 3rem;
}

.project-card-body{
    background-color: #FFFFFF;
    box-shadow:  24px 24px 48px #afafaf,
    -24px -24px 48px #ffffff;
    margin: 25px 0;
    overflow: hidden;
    width: 40vmin;
    border-radius: 35px;
    border-color: black;
    border-width: 20px;
}

.project-card-image {
    border-bottom: 4px solid #dfdfe5;
    width: 45vmin;
    overflow: hidden;
    aspect-ratio: 16/9;
    display: flex;
    object-fit: cover;
    justify-content: center;
}

.project-card-text {
    display: flex;
    text-align: center;
    flex-direction: column;
    align-content: center;
    height: 100%;
}

.project-card-description {
    display: flex;
    align-items: center;
    flex-direction: column;
}

.project-card_link_boarder {
    display: flex;
    align-self: center;
    justify-content: center;
    gap: 1rem;
    margin: 1rem;
    background-color: #dfdfe5;
    border-radius: 2rem;
    height: 6vmin;
    width: 60%;
}

.project-card-link-text {
    background-color: transparent;
    color: black;
    text-decoration: none;
    text-decoration-color: white;
    font-size: 2.5vmin;
    padding: 0.5rem;
}

/* CONTACT */

#contact {
    display: flex;
    justify-content: center;
    flex-direction: column;
}

.contact-info-upper-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    border-radius: 2rem;
    border-color: rgb(163, 163, 163);
    margin: 2rem auto;
    padding: 0.5rem;
    background-color: #dfdfe5;
}

.contact-info-container {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 0.5rem;
    margin: 1rem;
    background-color: #dfdfe5;
}

.contact-info-container p {
    background-color: #dfdfe5;
    font-size: 2vmin;
}

.contact-icon {
    cursor: default;
    background-color: #dfdfe5;
}

.email-icon {
    height: 2.5rem;
}

